# llp-proto

./: .gitignore  CMakeLists.txt  README.md  client.c  main.c  server.c
db/: CMakeLists.txt
db/include/: configuration.h
db/include/basic_tools/: basic_convert.h  basic_file_manager.h
db/include/basic_types/: list.h  tree_header.h  tuple.h
db/include/commands/: add_command.h  find_command.h  remove_command.h  update_command.h
db/include/console/: console_tools.h  interactive.h
db/include/crud_tools/: crud.h
db/include/generator/: empty_generator.h
db/include/tools/: file_manager.h
db/include/types/: crud_status.h  tree_header_tools.h  tuple_tools.h
db/src/: configuration.c
db/src/basic_tools/: basic_convert.c  basic_file_manager.c
db/src/basic_types/: list.c  tree_header.c  tuple.c
db/src/commands/: add_command.c  find_command.c  remove_command.c  update_command.c
db/src/console/: console_tools.c  interactive.c
db/src/crud_tools/: crud.c
db/src/generator/: empty_generator.c
db/src/tools/: file_manager.c
db/src/types/: tree_header_tools.c  tuple_tools.c
proto/: message.pb.c  message.pb.h  message.proto
proto/nanopb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
xpath_parser/: CMakeLists.txt
xpath_parser/include/: XPParser.h
xpath_parser/include/io/: printer.h
xpath_parser/include/parser/: parser.h
xpath_parser/include/structure/: state.h  view.h
xpath_parser/src/: XPParser.c
xpath_parser/src/io/: printer.c
xpath_parser/src/parser/: parser.c
xpath_parser/src/structure/: view.c
